<resources>
    <string name="app_name">Movie Catalogue (Local Storage)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tvShow">Tv Show</string>
    <string name="settings">Settings</string>
    <string name="ratingBar">Ratings</string>
    <string name="up_coming">Up Coming</string>
    <string name="watch">Watch</string>
    <string name="synopsis">Synopsis</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release Date</string>
    <string name="runtime">Duration (minutes)</string>
    <string name="production_companies">Production Companies</string>
    <string name="production_countries">Production Countries</string>
    <string name="_9_0">9.0</string>
    <string name="favorite">Favorite</string>
    <string name="vote_average">Vote Average</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="success_add">Success add to favorite</string>
    <string name="failed_add">The movie or tv show was added before</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="notify_ques_delete">Are you sure to delete this favorite?</string>
    <string name="notify_failed_delete_data">Failed delete data</string>
    <string name="notify_delete_mov">Delete Movie</string>
    <string name="notify_delete_tv">Delete Tv Shows</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv">Favorite Tv</string>
</resources>
