<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsActivityMovie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.example.moviecatalogueapi.ImageCornerRadius
            android:id="@+id/img_item_photo"
            android:layout_width="160dp"
            android:layout_height="220dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="160dp"
            android:layout_height="81dp"
            android:background="@drawable/text_background_rounded"
            android:fontFamily="@font/firasans"
            android:paddingLeft="5dp"
            android:paddingTop="17dp"
            android:paddingRight="5dp"
            android:paddingBottom="17dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            app:layout_constraintEnd_toEndOf="@id/img_item_photo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/img_item_photo"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/firasans"
            android:text="@string/ratingBar"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="@dimen/activity_vertical_margin" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_ratings"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:focusable="false"
            android:isIndicator="true"
            android:numStars="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/text_ratings" />

        <TextView
            android:id="@+id/ratingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/firasans"
            android:text="@string/_9_0"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />

        <Button
            android:id="@+id/watch"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="190dp"
            android:layout_height="52dp"
            android:layout_below="@id/ratingBar"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/firasans"
            android:text="@string/watch"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/ratingBar"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/ratingValue" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/firasans"
                    android:text="@string/genres"
                    android:textSize="14sp" />

                <TextView android:text=" : " />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16sp"
                    android:fontFamily="@font/firasans"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/firasans"
                    android:text="@string/release_date"
                    android:textSize="14sp" />

                <TextView android:text=" : " />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16sp"
                    android:fontFamily="@font/firasans"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/firasans"
                    android:text="@string/runtime"
                    android:textSize="14sp" />

                <TextView android:text=" : " />

                <TextView
                    android:id="@+id/runtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/firasans"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/firasans"
                    android:text="@string/production_companies"
                    android:textSize="14sp" />

                <TextView android:text=" : " />

                <TextView
                    android:id="@+id/production_companies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16sp"
                    android:fontFamily="@font/firasans"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/firasans"
                    android:text="@string/production_countries"
                    android:textSize="14sp" />

                <TextView android:text=" : " />

                <TextView
                    android:id="@+id/production_countries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16sp"
                    android:fontFamily="@font/firasans"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/text_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="@font/firasans"
            android:text="@string/synopsis"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/table" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="@font/firasans"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/text_synopsis" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>