<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activity.DetailsActivityMovie">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.moviecataloguelocalstorage.other.ImageCornerRadius
            android:id="@+id/img_item_photo"
            android:layout_width="160dp"
            android:layout_height="220dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="160dp"
            android:layout_height="81dp"
            android:background="@drawable/text_background_rounded"
            android:fontFamily="@font/firasans"
            android:paddingLeft="5dp"
            android:paddingTop="17dp"
            android:paddingRight="5dp"
            android:paddingBottom="17dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            app:layout_constraintEnd_toEndOf="@id/img_item_photo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/img_item_photo"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/firasans"
            android:text="@string/ratingBar"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="@dimen/activity_vertical_margin" />


        <TextView
            android:id="@+id/vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_add_favorite"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/firasans"
            android:text="@string/_9_0"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_ratings"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            app:layout_constraintEnd_toEndOf="@id/btn_add_favorite"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/btn_add_favorite"
            android:fontFamily="@font/firasans"
            app:layout_constraintStart_toStartOf="@id/btn_add_favorite"
            android:text="@string/release_date"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/vote"
            app:layout_constraintStart_toEndOf="@id/img_item_photo" />

        <Button
            android:id="@+id/btn_add_favorite"
            android:layout_width="190dp"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/add_to_favorite"/>

        <TextView
            android:id="@+id/text_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="@font/firasans"
            android:text="@string/synopsis"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="@font/firasans"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/text_synopsis" />

        <TextView
            android:id="@+id/tv_url_image_mov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>